recursion.logo.lessons.recursion.logo.koch.HexaKoch.scala.error
HexaKoch:26: error: expected start of definition
	override def run() {
                 ^HexaKoch:29: error: Unmatched closing brace '}' ignored here
}
^